--- a/src/app/components/cuestionario-card/cuestionario-card.component.html
+++ b/src/app/components/cuestionario-card/cuestionario-card.component.html
@@ -20,8 +20,12 @@
 </div> -->
 
 
+<div class="card-container grid grid-cols-3 gap-4">
+
 <div *ngFor="let card of datosCuestionarios; let i = index" class="card">
+  <div class="card-header">
   <h3>{{ card.titulo }}</h3>
+  </div>
   <ul>
     <li *ngFor="let pregunta of card.preguntas">
       {{ pregunta.texto }} ({{ pregunta.tipo }})
@@ -29,4 +33,6 @@
   </ul>
   <button (click)="compartir(card)">Compartir</button>
 </div>
+</div>
+
 
