--- a/src/app/components/cuestionario-card/cuestionario-card.component.html
+++ b/src/app/components/cuestionario-card/cuestionario-card.component.html
@@ -31,7 +31,7 @@
       {{ pregunta.texto }} ({{ pregunta.tipo }})
     </li>
   </ul>
-  <button (click)="compartir(card)">Compartir</button>
+  <button class="btn-env"  (click)="compartir(card)">Compartir</button>
 </div>
 </div>
 
